# alarkhabil-frontend

./: .gitignore  Cargo.toml  README.md  config-default.json  example.env  package-lock.json  package.json  tsconfig.json  webpack.config.js
assets/css/: main.css  theme.css
branding-default/: README.md
src/: backend_api.rs  config.rs  error_reporting.rs  lib.rs  unix_time.rs
src/handler/: api.rs  mod.rs
src/template/: base.rs  mod.rs
templates/: base.html  content_author.html  content_author_list_item.html  content_channel.html  content_channel_list_item.html  content_invites.html  content_meta_page.html  content_meta_page_list_item.html  content_post.html  content_post_list.html  content_post_list_item.html  content_single_paragraph_message.html  content_tag.html  content_tag_list_item.html
webpack-src/: alarkhabil.ts  api.ts  backend-api.ts  base64.ts  dns-token.ts  freeze.ts  frontend-api.ts  hex.ts  index.ts  invite-token.ts  page-metadata.ts  passphrase.ts  render.ts  router.ts  routes-common.ts  site-config.ts  template.ts  types.ts  urls.ts  utf8.ts  uuid.ts
webpack-src/backend/: account.ts  author.ts  channel.ts  invite.ts  meta.ts  post.ts  tag.ts
webpack-src/crypto/: aes-gcm.ts  crypto.ts  ed25519.ts  sha256.ts
webpack-src/routes/: index.ts  routes-channel.ts  routes-top.ts
webpack-src/storage/: idb.ts  storage.ts
