[package]
name = "alarkhabil-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.19.0"
url = "2.4.1"
